# ordermatching

./: ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
include/om/: engine.hpp  feed.hpp  order.hpp  orderbook.hpp  snapshot.hpp
src/: matchcli.cpp
tests/: CMakeLists.txt  check.hpp  test_advanced.cpp  test_orderbook.cpp  test_stream.cpp  test_v4_snapshot.cpp
